# msgpack-rust

mayhem/: Dockerfile  roundtrip.mayhemfile
rmp-serde/fuzz/: Cargo.toml
rmp-serde/fuzz/fuzz_targets/: roundtrip.rs
