[package]
name = "rmp-serde-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version ="1.0.100", features = ["derive"] }

[dependencies.rmp-serde]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[features]
debug = []

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

[profile.release]
debug = true
